@@ -28,6 +28,7 @@ Andreas Scherer
 Arjan Bos
 Fernando Pablo Lopez-Lezcano
 Jack O'Quin
+Juergen Reuter
 Karl Hammar
 Richard Schoeller
 
