@@ -1,3 +1,12 @@
+2004-12-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/music-functions.scm (cue-substitute): voice counts start at 0.
+
+	* lily/note-head.cc (internal_print): always try the "s" head if
+	u/d not found.
+
+	* scm/titling.scm (marked-up-headfoot): reinstate default tagline.
+
 2004-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* mf/parmesan-heads.mf (overdone_heads): typos.
